# JRTC

./: CMakeLists.txt  JRTC.qbs  README.md  cmakeBuild.bat  qbsBuild.bat
JXMPP/: CMakeLists.txt  JXMPP.h  JXMPP.pro  JXMPP.qbs  Version.h  parser.py
JXMPP/AdHoc/: OutgoingAdHocCommandSession.cpp  OutgoingAdHocCommandSession.h
JXMPP/Avatars/: AvatarManager.cpp  AvatarManager.h  AvatarManagerImpl.cpp  AvatarManagerImpl.h  AvatarMemoryStorage.h  AvatarProvider.cpp  AvatarProvider.h  AvatarStorage.cpp  AvatarStorage.h  CombinedAvatarProvider.cpp  CombinedAvatarProvider.h  DummyAvatarManager.h  NullAvatarManager.h  OfflineAvatarManager.cpp  OfflineAvatarManager.h  VCardAvatarManager.cpp  VCardAvatarManager.h  VCardUpdateAvatarManager.cpp  VCardUpdateAvatarManager.h
JXMPP/Base/: API.h  Algorithm.h  Atomic.h  BoostFilesystemVersion.h  ByteArray.cpp  ByteArray.h  Concat.h  DateTime.cpp  DateTime.h  Debug.cpp  Debug.h  Error.cpp  Error.h  FileSize.cpp  FileSize.h  IDGenerator.cpp  IDGenerator.h  LRUCache.h  Listenable.h  Log.cpp  Log.h  LogSerializers.cpp  LogSerializers.h  Path.cpp  Path.h  Paths.cpp  Paths.h  Platform.h  RandomGenerator.cpp  RandomGenerator.h  Regex.cpp  Regex.h  SafeAllocator.cpp  SafeAllocator.h  SafeByteArray.cpp  SafeByteArray.h  SafeString.h  SimpleIDGenerator.cpp  SimpleIDGenerator.h  StartStopper.h  (+11 more)
JXMPP/Chat/: ChatStateNotifier.cpp  ChatStateNotifier.h  ChatStateTracker.cpp  ChatStateTracker.h
JXMPP/Client/: BlockList.cpp  BlockList.h  BlockListImpl.cpp  BlockListImpl.h  Client.cpp  Client.h  ClientBlockListManager.cpp  ClientBlockListManager.h  (+25 more)
(+1835 files in other folders)
